--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==3.2.7"
 
 [dev-packages]
 autopep8 = "*"
+ipython = "*"
+pylint = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "*"
